[package]
name = "version-lp"
version = "0.2.1"
description = "a version struct library for use with version comparing, and wildcard resolving"
authors = ["snsvrno <snsvrno@tuta.io>"]
license = "MIT"
readme = "README.md"
keywords = [ "version","comparison","wildcards" ] 
categories = ["data-structures"]
repository = "https://github.com/snsvrno/version-lp-rs"

exclude = [ "/tests" ]

[dependencies]
regex = "1.0"
serde = "1.0"
serde_test = "1.0"
serde_derive = "1.0"
