[package]
name = "version-lp"
version = "0.3.0"
edition = "2018"

description = "a version struct library for use with version comparing, and wildcard resolving"
authors = ["snsvrno <snsvrno@tuta.io>"]
license = "MIT"
readme = "README.md"
keywords = [ "version","comparison","wildcards" ] 
categories = ["data-structures"]
repository = "https://github.com/snsvrno/version-lp-rs"
exclude = [ "/tests" ]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
regex = "1.0"

[dev-dependencies]
serde_test = "1.0"
